tests/sksl/errors/Ossfuzz27650.sksl
void main() { int i=9E7; 2+int4(i); }
